--- a/participantes.html
+++ b/participantes.html
@@ -36,10 +36,12 @@
           </li> 
         </ul>
 
-        <!-- <form class="form-inline my-2 my-lg-0" >
+        <!-- 
+        <form class="form-inline my-2 my-lg-0" >
           <input disabled class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button disabled class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
+        </form> 
+        -->
 
       </div>
     </nav>
@@ -98,7 +100,7 @@
                 </div>
                 <div class="form-group col-md-2">
                   <label for="idade">Idade</label>
-                  <input type="number" class="form-control" id="idade" required>
+                  <input type="number" class="form-control" id="idade" min="0" step="1" required>
                 </div>
               </div>
               <div class="form-row">
